# exp1

./: .gitignore  LICENSE  setup.py
core/: BUILD.gn  requirement.txt
core/gn/: pybind11_headers.py  python_ext_suffix.py  python_ldflags.py
core/src/tests/: bindlib.cpp  core.cpp  core.mm  export.cc  export.h  helloworld.cpp
example/: main.py
exp1/: __init__.py
